change tests to AssertJ