@@ -34,7 +34,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import java.util.List;
 
 import static io.axual.ksml.operation.SensorData.SensorType.HUMIDITY;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 
 @ExtendWith(KSMLTestExtension.class)
 @Slf4j
@@ -73,13 +73,13 @@ public class KSMLMapKeyTest {
         inputTopic.pipeInput("utrecht", inputs.get(1));
 
         List<KeyValue<String, GenericRecord>> keyValues = outputTopic.readKeyValuesToList();
-        assertEquals(2, keyValues.size(), "All records should be transformed");
+        assertThat(keyValues.size()).as("All records should be transformed").isEqualTo(2);
 
         // we expect the mapped key to be the first 4 characters, uppercased, and the value unchanged
-        assertEquals("AMST", keyValues.get(0).key);
-        assertEquals(inputs.getFirst(), keyValues.get(0).value);
-        assertEquals("UTRE", keyValues.get(1).key);
-        assertEquals(inputs.get(1), keyValues.get(1).value);
+        assertThat(keyValues.get(0).key).isEqualTo("AMST");
+        assertThat(keyValues.get(0).value).isEqualTo(inputs.getFirst());
+        assertThat(keyValues.get(1).key).isEqualTo("UTRE");
+        assertThat(keyValues.get(1).value).isEqualTo(inputs.get(1));
     }
 }
 
